src/app/components/stories/stories.component.scss
ion-title {
    padding: 20px 0 20px 20px;
}

ion-avatar{
   margin:10px;
}

ion-label {
    margin-left: 20px;
    padding: 0 0 10px 0;
}

.stories {
    border-style: solid;
    border-width: 1px;
    border-radius: 15px 15px 15px 15px;
}

.stories-scroll {
    overflow: scroll;
    white-space: nowrap;
}

div[scrollx=true], div[scrolly=true] {
    position: relative;
    overflow: hidden;

    ::-webkit-scrollbar {
        display: none;
    }
}

div[scrollx=true] {
    overflow-x: auto;
}

div[scrolly=true] {
    overflow-y: auto;
}

